--- a/pom.xml
+++ b/pom.xml
@@ -58,5 +58,14 @@
     <version>1.0.17</version>
 </dependency>
 
+
+<dependency>
+  <groupId>org.testng</groupId>
+  <artifactId>testng</artifactId>
+  <version>6.8</version>
+  <scope>test</scope>
+</dependency>
+
+
   </dependencies>
 </project>
