--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,6 @@
 
   <name>salesiq.mobileautomation</name>
   <url>http://maven.apache.org</url>
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -19,7 +18,9 @@
    <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.5.1</version>
         <configuration>
+         <compilerVersion>1.8</compilerVersion>
             <source>1.8</source>
             <target>1.8</target>
         </configuration>
